--- a/authen/templates/authen/index.html
+++ b/authen/templates/authen/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	<body>
-
+ <p>Te-ai LOGAT ESTI GOLD LIKE </p>
 
 
 	</body>
