Post model final

--- a/new_post/templates/new_post/create_post.html
+++ b/new_post/templates/new_post/create_post.html
@@ -10,6 +10,14 @@
 		<br>
 		<input type="text" name="post_text" style="height: 25px; width: 550px"> <br>
 		<br>
+		<select name="category">
+			<option value="">category</option>
+			<option value="Romance">Romance</option>
+			<option value="Horror">Horror</option>
+			<option value="Dream">Dream</option>
+		</select>
+		<br>
+		<br>
 		<input type="submit" value="Submit">
 	</form>
 </body>
