--- a/authen/static/authen/style.css
+++ b/authen/static/authen/style.css
@@ -15,11 +15,11 @@ input, textarea, .create_acount {
 	margin-left: 35%;
 }
 
-
-
-
-.inputText {
+.inputText input {
 	height: 40px;
+}
+
+.inputText input, .inputText textarea {
 	width: 27%;
 	background: #06141e;
 	border: 3px solid #505861;
@@ -42,7 +42,7 @@ input, textarea, .create_acount {
 	color: #fff;
 }
 
-.createAcount {
+.createAcount input {
 	width: 27%;
 	height: 40px;
 	background: #0b1c2a;
@@ -52,7 +52,7 @@ input, textarea, .create_acount {
 	cursor: pointer;
 }
 
-.createAcount input:hover {
+.createAcount input:hover {;
 	border: 3px solid #535d67;
 	color: #00aeff;
 }
