--- a/authen/templates/authen/register.html
+++ b/authen/templates/authen/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		{% load staticfiles %}
+	{% load staticfiles %}
 		<title>Acasa</title>
-		<link rel="stylesheet" type="text/css" href={% static 'authen/style.css' %} />
+		<link rel="stylesheet" type="text/css" href="{ % static 'authen/style.css' % }" />
 		<script type="text/javascript">
 			function checkPass()
 			{
@@ -15,12 +15,12 @@
 			    //Set the colors we will be using ...
 			    var goodColor = "#66cc66";
 			    var badColor = "#ff6666";
-			    //Compare the values in the password field
+			    //Compare the values in the password field 
 			    //and the confirmation field
 			    if(pass1.value == pass2.value){
-			        //The passwords match.
+			        //The passwords match. 
 			        //Set the color to the good color and inform
-			        //the user that they have entered the correct password
+			        //the user that they have entered the correct password 
 			        pass2.style.backgroundColor = goodColor;
 			        message.style.color = goodColor;
 			        message.innerHTML = "Passwords Match!"
@@ -37,8 +37,8 @@
 	</head>
 	<body>
 		<form method="post" action="">
-		{% csrf_token %} 
-			  <div class="inputText"> 
+		{% csrf_token %}
+			<div class="inputText">
 				<input type="text" name="username" placeholder="Username" required />
 				<br><br>
 				<input type="email" name="email" placeholder="Email" required />
@@ -48,11 +48,12 @@
 				<input type="password" name="password2" id="pass2" onkeyup="checkPass(); return false;" placeholder="Confirm Password" required />
 				<br><br>
 				<span id="confirmMessage" class="confirmMessage"></span>
-		
+			</div>
+
 			<div class="send">
 				<input type="submit" name="register" value="Register" class="register" />
 			</div>
-
+		
 		</form>
 	</body>
-</html>
+</html> 
