--- a/home/templates/home/Front.html
+++ b/home/templates/home/Front.html
@@ -6,5 +6,18 @@
 <body>
 		<h1>FRONTPAGE</h1>
 		<a href="/submit">Submit a new post</a>
+		{% for post in posts %}
+		<div>
+			<h1>{{post.get_title}}</h1>
+			<br>
+			<br>
+			<p> {{post.get_text}} </p>
+			<br>
+			<br>
+			<button type="button"> Upvote</button>
+			<button type="button"> Downvote</button>
+		</div>
+		{% endfor %}
+
 </body>
 </html>
