Front page perfection

--- a/new_post/templates/new_post/create_post.html
+++ b/new_post/templates/new_post/create_post.html
@@ -21,5 +21,8 @@
 		<br>
 		<input type="submit" value="Submit">
 	</form>
+	<br>
+	<br>
+	<button href="{% url 'home' %}">Home</button>
 </body>
 </html>
