--- a/authen/templates/authen/register.html
+++ b/authen/templates/authen/register.html
@@ -2,58 +2,49 @@
 <html>
 	<head>
 	{% load staticfiles %}
-		<title>Acasa</title>
-		<link rel="stylesheet" type="text/css" href="{% static 'authen/style.css' %}"/>
-		<script type="text/javascript">
-			function checkPass()
-			{
-			    //Store the password field objects into variables ...
-			    var pass1 = document.getElementById('pass1');
-			    var pass2 = document.getElementById('pass2');
-			    //Store the Confimation Message Object ...
-			    var message = document.getElementById('confirmMessage');
-			    //Set the colors we will be using ...
-			    var goodColor = "#66cc66";
-			    var badColor = "#ff6666";
-			    //Compare the values in the password field
-			    //and the confirmation field
-			    if(pass1.value == pass2.value){
-			        //The passwords match.
-			        //Set the color to the good color and inform
-			        //the user that they have entered the correct password
-			        pass2.style.backgroundColor = goodColor;
-			        message.style.color = goodColor;
-			        message.innerHTML = "Passwords Match!"
-			    }else{
-			        //The passwords do not match.
-			        //Set the color to the bad color and
-			        //notify the user.
-			        pass2.style.backgroundColor = badColor;
-			        message.style.color = badColor;
-			        message.innerHTML = "Passwords Do Not Match!"
-			    }
-			}
-		</script>
+	<title>Register - Fireplace</title>
+	<link type="text/css" rel="stylesheet" href="{% static 'materialize/bin/materialize.css' %}"  media="screen,projection"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'authen/style.css' %}"/>
 	</head>
 	<body>
-		<form method="post" action="">
-		{% csrf_token %}
-			<div class="inputText">
-				<input type="text" name="username" placeholder="Username" required />
-				<br><br>
-				<input type="email" name="email" placeholder="Email" required />
-				<br><br>
-				<input type="password" name="password" id="pass1" placeholder="Password" required />
-				<br><br>
-				<input type="password" name="password2" id="pass2" onkeyup="checkPass(); return false;" placeholder="Confirm Password" required />
-				<br><br>
-				<span id="confirmMessage" class="confirmMessage"></span>
-			</div>
-
-			<div class="send">
-				<input type="submit" name="register" value="Register" class="register" />
-			</div>
-
-		</form>
+	   	{% block footer %}
+        	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        	<script type="text/javascript" src="{% static 'materialize/bin/materialize.js' %}"></script>
+    	{% endblock %}
+	<div class="formk">
+		<div class="row">
+		    <form class="col s12" method="post" action="">
+		    {% csrf_token %}
+		      <div class="row">
+		        <div class="input-field col s12">
+		          <input id="first_name" type="text" class="validate" name="username" required />
+		          <label for="first_name" data-error="wrong" data-success="right">Username</label>
+		        </div>
+		      </div>
+		      <div class="row">
+		        <div class="input-field col s12">
+		          <input id="password" type="password" class="validate" name="password" required />
+		          <label for="password" data-error="wrong" data-success="right">Password</label>
+		        </div>
+		      </div>
+		      <div class="row">
+		        <div class="input-field col s12">
+		          <input id="password" type="password" class="validate" name="password2" required/ >
+		          <label for="password" data-error="wrong" data-success="right">Confirm your Password</label>
+		        </div>
+		      </div>
+		      <div class="row">
+		        <div class="input-field col s12">
+		          <input id="email" type="email" class="validate" name="email" required />
+		          <label for="email" data-error="wrong" data-success="right">Email</label>
+		        </div>
+		      </div>
+		      <div class="but">
+		       <button class="btn waves-effect waves-light" type="submit" name="Register">Register
+  			   </button>
+  			  </div>
+		    </form>
+		</div>
+	</div>
 	</body>
 </html>
