--- a/new_post/templates/new_post/create_post.html
+++ b/new_post/templates/new_post/create_post.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	{% load staticfiles %}
+	<title>Submit - Fireplace</title>
+	<link type="text/css" rel="stylesheet" href="{% static 'materialize/bin/materialize.css' %}"  media="screen,projection"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'new_post/style.css' %}"/>
 </head>
 <body>
-	
-	<form action="{% url 'submit' %}" method="GET">
-		{% csrf_token %} 
-		<input type="text" name="title" style="height: 25px; width: 350px"> <br>
-		<br>
-		<input type="text" name="post_text" style="height: 25px; width: 550px"> <br>
-		<br>
-		<select name="category">
-			<option value="">category</option>
-			<option value="Romance">Romance</option>
-			<option value="Horror">Horror</option>
-			<option value="Dream">Dream</option>
-		</select>
-		<br>
-		<br>
-		<input type="submit" value="Submit">
-	</form>
-	<br>
-	<br>
-	<button href="{% url 'home' %}">Home</button>
+	{% block footer %}
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="{% static 'materialize/bin/materialize.js' %}"></script>
+    {% endblock %}
+	<div class="row">
+    <form class="col s12" action="{% url 'submit' %}" method="POST" id="formk">
+      {% csrf_token %} 
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="input_text" type="text" length="10" required />
+           <label for="input_text" data-error="wrong" data-success="right">Title</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="textarea1" class="materialize-textarea" required ></textarea>
+          <label for="textarea1" data-error="wrong" data-success="right">Story text</label>
+        </div>
+      </div>
+      <div class="row">
+	      <div class="input-field col s12">
+	    	<select name="">
+	    	  <option value="" disabled selected>Choose category</option>
+		      <option value="Horror">Horror</option>
+		      <option value="Romance">Romance</option>
+		      <option value="Dream">Dream</option>
+		      <option value="Action/Adventure">Action/Adventure</option>
+	    	</select>
+	    	<label>Choose category:</label>
+	  	  </div>
+  	  </div>
+    </form>
+  </div>
 </body>
 </html>
