--- a/authen/static/authen/style.css
+++ b/authen/static/authen/style.css
@@ -1,11 +1,3 @@
-.formk{
-	width: 50%;
-	margin-left: 25%;
-	margin-top: 10%;
-}
-.but{
-	margin-left: 44%;
-}
-.sub{
-	width: 40%;
+.log-in-form {
+  margin-top: 60%;
 }
