--- a/authen/templates/authen/login.html
+++ b/authen/templates/authen/login.html
@@ -3,36 +3,30 @@
 	<head>
 	{% load staticfiles %}
 	<title>Login - Fireplace</title>
-	<link type="text/css" rel="stylesheet" href="{% static 'materialize/bin/materialize.css' %}"  media="screen,projection"/>
+	<link type="text/css" rel="stylesheet" href="{% static 'authen/css/foundation.css' %}"/>
 	<link rel="stylesheet" type="text/css" href="{% static 'authen/style.css' %}"/>
 	</head>
 	<body>
 	   	{% block footer %}
         	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        	<script type="text/javascript" src="{% static 'materialize/bin/materialize.js' %}"></script>
+        	<script type="text/javascript" src="{% static 'authen/js/foundation.js' %}"></script>
     	{% endblock %}
-	<div class="formk">
 		<div class="row">
-		    <form class="col s12" method="post" action="">
-		    {% csrf_token %}
-		      <div class="row">
-		        <div class="input-field col s12">
-		          <input id="first_name" type="text" class="validate" name="username" required />
-		          <label for="first_name" data-error="wrong" data-success="right">Username</label>
-		        </div>
+		  <div class="medium-6 medium-centered large-4 large-centered columns" >
+		    <form action="" method="POST">
+					{% csrf_token %}
+		      <div class="row column log-in-form">
+		        <label>Username
+		          <input type="text" placeholder="Username" name="username" required />
+		        </label>
+		        <label>Password
+		          <input type="password" placeholder="Password" name="password" required />
+		        </label>
+		        <input type="submit" class="button expanded" name="Login" style="background-color:#5f4021;">
+		        <p class="text-center"><a style="color: #5f4021" href="#">Forgot your password?</a></p>
 		      </div>
-		      <div class="row">
-		        <div class="input-field col s12">
-		          <input id="password" type="password" class="validate" name="password" required />
-		          <label for="password" data-error="wrong" data-success="right">Password</label>
-		        </div>
-		      </div>
-		      <div class="but">
-		       <button class="btn waves-effect waves-light" type="submit" name="Login">Login
-  			  </button>
-  			  </div>
 		    </form>
+  		</div>
 		</div>
-	</div>
-	</body>
+</body>
 </html>
