--- a/authen/templates/authen/register.html
+++ b/authen/templates/authen/register.html
@@ -10,6 +10,7 @@
 	   	{% block footer %}
         	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         	<script type="text/javascript" src="{% static 'authen/js/foundation.js' %}"></script>
+					<script type="text/javascript" stc="{% static 'authen/register.js' %}"></script>
     	{% endblock %}
 		<div class="row">
 		  <div class="medium-6 medium-centered large-4 large-centered columns" >
@@ -23,10 +24,10 @@
               <input type="email" placeholder="Email" name="username" required />
             </label>
 		        <label>Password
-		          <input type="password" placeholder="Password" name="password" required />
+		          <input type="password" placeholder="Password" name="password" id="pass1" required />
 		        </label>
             <label>Confirm your password
-              <input type="password" placeholder="Confirm your password" name="password2" required />
+              <input type="password" placeholder="Confirm your password" name="password2" id="pass2" onkeyup="checkPasswords();" required/>
             </label>
 		        <input type="submit" class="button expanded" name="Login" style="background-color:#5f4021;">
 		      </div>
